essaie anim safari

--- a/menu3.html
+++ b/menu3.html
@@ -54,7 +54,7 @@
                     <h2>ENTRÉES</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Tartare de poulpe acidulé</b></p>
                             <div class="menu__prix">
@@ -66,7 +66,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Velouté de légumes d'antan</b></p>
                             <div class="menu__prix">
@@ -78,7 +78,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Soupe à l'oignon</b></p>
                             <div class="menu__prix">
@@ -95,7 +95,7 @@
                 <div class="menu__choix">
                     <h2>PLATS</h2>
                     <hr>
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Coquilles Saint-Jacques</b></p>
                             <div class="menu__prix">
@@ -109,7 +109,7 @@
 
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Magret de canard</b></p>
                             <div class="menu__prix">
@@ -121,7 +121,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Pigeonneau d’Ille-et-Vilaine</b></p>
                             <div class="menu__prix">
@@ -140,7 +140,7 @@
                     <h2>DESSERTS</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Pétales de violettes glacés</b></p>
                             <div class="menu__prix">
@@ -152,7 +152,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Fondant au chocolat</b></p>
                             <div class="menu__prix">
@@ -165,7 +165,7 @@
                     </div>
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Millefeuille croustillant</b></p>
                             <div class="menu__prix">
