--- a/menu4.html
+++ b/menu4.html
@@ -54,7 +54,7 @@
                     <h2>ENTRÉES</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Tartare de thon</b></p>
                             <div class="menu__prix">
@@ -66,7 +66,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Bouchée de homard croustillant </b></p>
                             <div class="menu__prix">
@@ -78,7 +78,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Velouté de cèpes </b></p>
                             <div class="menu__prix">
@@ -95,7 +95,7 @@
                 <div class="menu__choix">
                     <h2>PLATS</h2>
                     <hr>
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Poulet rôti aux herbes de Provence</b></p>
                             <div class="menu__prix">
@@ -109,7 +109,7 @@
 
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Langouste rôtie</b></p>
                             <div class="menu__prix">
@@ -121,7 +121,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Côte de boeuf Angus</b></p>
                             <div class="menu__prix">
@@ -140,7 +140,7 @@
                     <h2>DESSERTS</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Farandole de desserts</b></p>
                             <div class="menu__prix">
@@ -152,7 +152,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Crème brulée</b></p>
                             <div class="menu__prix">
@@ -165,7 +165,7 @@
                     </div>
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Tiramisu</b></p>
                             <div class="menu__prix">
