--- a/menu1.html
+++ b/menu1.html
@@ -53,7 +53,7 @@
                     <h2>ENTRÉES</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Fricassée d'escargot</b></p>
                             <div class="menu__prix">
@@ -65,7 +65,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Foie gras de canard mi-cuit</b></p>
                             <div class="menu__prix">
@@ -77,7 +77,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Oeuf au plat</b></p>
                             <div class="menu__prix">
@@ -94,7 +94,7 @@
                 <div class="menu__choix">
                     <h2>PLATS</h2>
                     <hr>
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Filet de boeuf aux herbes</b></p>
                             <div class="menu__prix">
@@ -108,7 +108,7 @@
 
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Parmentier de queue de boeuf</b></p>
                             <div class="menu__prix">
@@ -120,7 +120,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Filet de turbot</b></p>
                             <div class="menu__prix">
@@ -139,7 +139,7 @@
                     <h2>DESSERTS</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Paris-Brest</b></p>
                             <div class="menu__prix">
@@ -151,7 +151,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Macaron au chocolat d'exception</b></p>
                             <div class="menu__prix">
@@ -164,7 +164,7 @@
                     </div>
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Mousse au chocolat</b></p>
                             <div class="menu__prix">
