--- a/menu2.html
+++ b/menu2.html
@@ -54,7 +54,7 @@
                     <h2>ENTRÉES</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Ravioles de foie gras</b></p>
                             <div class="menu__prix">
@@ -66,7 +66,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Caviar osciètre </b></p>
                             <div class="menu__prix">
@@ -78,7 +78,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Homard et espuma de potiron</b></p>
                             <div class="menu__prix">
@@ -90,7 +90,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Foie gras de canard cuit entier</b></p>
                             <div class="menu__prix">
@@ -107,7 +107,7 @@
                 <div class="menu__choix">
                     <h2>PLATS</h2>
                     <hr>
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Noix de coquilles Saint-Jacques</b></p>
                             <div class="menu__prix">
@@ -121,7 +121,7 @@
 
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Langoustine poêlée</b></p>
                             <div class="menu__prix">
@@ -133,7 +133,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Mijoté de queue de boeuf </b></p>
                             <div class="menu__prix">
@@ -152,7 +152,7 @@
                     <h2>DESSERTS</h2>
                     <hr>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Macaron noisette et chocolat</b></p>
                             <div class="menu__prix">
@@ -164,7 +164,7 @@
                         <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Baba au rhum revisité </b></p>
                             <div class="menu__prix">
@@ -177,7 +177,7 @@
                     </div>
 
 
-                    <div class="btn__menu">
+                    <div class="btn__menu" onclick="">
                         <div class="menu__titre">
                             <p><b>Tarte au citron meringuée</b></p>
                             <div class="menu__prix">
