finition marge titre + footer

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:hello@gmail.com">Contact</a></li>
+            <li><a href="mailto:hello@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 
