--- a/index.html
+++ b/index.html
@@ -23,39 +23,44 @@
 <!--Haut de page-->
 
 <body>
-
-    <div class="chargement">
-        <span class="chargement__lettre">M</span>
-        <span class="chargement__lettre">I</span>
-        <span class="chargement__lettre">A</span>
-        <span class="chargement__lettre">M</span>
-    </div>
-
-
+    <div class="wrapper">
+        <div class="chargement">
+            <span class="chargement__lettre">M</span>
+            <span class="chargement__lettre">I</span>
+            <span class="chargement__lettre">A</span>
+            <span class="chargement__lettre">M</span>
+        </div>
 
 
 
-    <header>
-        <img src="./Maquettes/images/logo/ohmyfood.png" class="logo" alt="logo de  ohmyfood">
-    </header>
-    <main>
-        <!--Partie présentation-->
 
-        <section class="presentation">
-            <div class="presentation__localisation">
-                <i class="fas fa-map-marker-alt icon"></i>
-                <p>Paris, Belleville</p>
-            </div>
 
-            <div class="presentation__site">
-                <h1>Réservez le menu qui vous convient</h1>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <button class="presentation__site btn__action">Explorer nos restaurants</button>
+        <header>
+            <img src="./Maquettes/images/logo/ohmyfood.png" class="logo" alt="logo de  ohmyfood">
+        </header>
+        <main>
 
-            </div>
-        </section>
 
-        <div class="wrapper">
+
+
+            <!--Partie présentation-->
+
+            <section class="presentation">
+                <div class="presentation__localisation">
+                    <i class="fas fa-map-marker-alt icon"></i>
+                    <p>Paris, Belleville</p>
+                </div>
+
+                <div class="presentation__site">
+                    <h1>Réservez le menu qui vous convient</h1>
+                    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                    <button class="presentation__site btn__action">Explorer nos restaurants</button>
+
+                </div>
+            </section>
+
+            <!--Partie fonctionnement-->
+
             <section class="fonctionnement">
                 <h1 class="fonctionnement__titre">Fonctionnement</h1>
                 <div class="fonctionnement__explication">
@@ -134,28 +139,28 @@
                 </div>
 
             </section>
-        </div>
-
-
-    </main>
 
 
 
+        </main>
 
 
 
-    <!--Footer-->
 
-    <footer class="footer">
-        <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de ohmyfood">
-        <ul class="footer__liste">
-            <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:hello@ohmyfood.com">Contact</a></li>
-        </ul>
-    </footer>
 
+
+        <!--Footer-->
+
+        <footer class="footer">
+            <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de ohmyfood">
+            <ul class="footer__liste">
+                <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="mailto:hello@ohmyfood.com">Contact</a></li>
+            </ul>
+        </footer>
+    </div>
 </body>
 
 </html>
